tests/error/errors_on_usage/for_new_var.err
Error: Variable not defined (at $FILE:8:11)
  | 
6 |     for _ in xs:
7 |         y = 5
8 |     return y
  |            ^ `y` might be undefined ...
  | 
6 |     for _ in xs:
  |              -- ... if this expression is `False`

Guppy compilation failed due to 1 previous error
